--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           <span>REST APIs</span>
         </div>
 
-        <a class="button" href="https://github.com/tannugiri11/swiggy_project" target="_blank">
+        <a class="button" href="https://tannugiri11.github.io/swiggy_project/" target="_blank">
           View on GitHub →
         </a>
       </div>
